--- a/styles/indx.css
+++ b/styles/indx.css
@@ -1,4 +1,57 @@
-.content {
-    border: 2px solid bisque;
-    padding: 18px;
+th, td {
+    border: 1px solid black;
+    padding: 8px;
+
 }
+
+.devices-lab {
+    border-collapse: collapse;
+    text-align: center;
+    /* flex: 1; */
+    background-color: #C994E4;
+    margin-bottom: 20px;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    background-color: #E6E6FA;
+    font-family: monospace;
+}
+
+a {
+    text-decoration: none;
+}
+
+.header{
+    font-size: 32px;
+    font-weight: 900 ;
+    align-self: center;
+}
+
+.section1, .section2 {
+    font-size: 20px;
+    font-weight: 900 ;
+    align-self: flex-start;
+    margin-bottom: 5px;
+}
+
+.line{
+    align-self: center;
+    margin-bottom: 20px;
+}
+
+.devices-stock {
+    border-collapse: collapse;
+    text-align: center;
+    background-color: #C994E4;
+    margin-bottom: 10px;
+    margin-right: 60%;
+
+}
+
+a, a:visited, a:hover, a:active {
+    color: inherit;
+    text-decoration: none;
+  }
+  
